Goget fetcher should error out if gobinpath is not valid
(cherry picked from commit daf08a06bbced659e95cb3883f6b03c00a1454d7)

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
     - MINIO_SECRET_KEY=minio123
     - ATHENS_MONGO_STORAGE_URL=mongodb://127.0.0.1:27017
     - CODE_COV=1
-    - GO_BINARY_PATH=vgo
+    - GO_BINARY_PATH=$(which vgo)
     - TMPDIR=/tmp/
 before_script:
   - make setup-dev-env
